--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,15 @@ plugins {
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.tmobiles.compass"
         minSdkVersion 21
-        targetSdkVersion 31
-        versionCode 2
-        versionName "1.0.1"
+        targetSdkVersion 33
+        versionCode 3
+        versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -42,6 +42,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
